fix spelling errors

--- a/about_me.html
+++ b/about_me.html
@@ -51,10 +51,10 @@
         </P>
         <p>
             I was even called a "quintessential cat" once! The sheer audacity!
-            But seriously, have you ever seen these cheekbones and perfect facial symmetry?
+            But seriously, have you ever seen cheekbones and perfect facial symmetry like this?
         </p>
         <P>
-            My humble beginning only made my transformation even more impressive.
+            My humble beginning only made my transformation more impressive.
             Every day it reminds me how special I am. If you have any doubt, just check out the
             glamour shots my dad took of me below. If your mortal eyes end up blinded by my star power, don't say
             I didn't warn you!
