--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             <h1>Hey you!</h1>
             <p>
                 <em>I suppose,</em> you, like many before, have fallen
-                for my charms and came here to admire me.
+                for my charms and come here to admire me.
             </p>
             <p>
                 Well, I get it!
@@ -56,7 +56,7 @@
                 I mean, you don't deserve to enter this site...but here we are.
             </P>
             <P>
-                So whatever.
+                So, whatever.
             </P>
             <P>
                 Enjoy?
