--- a/my_dad.html
+++ b/my_dad.html
@@ -34,12 +34,12 @@
 
     <div class="Text">
         <p>
-           <em>My dad</em> is a videographer and photographer.
+           <em>My dad</em> is an uber-talented videographer and photographer.
         </p>
         <p>
-            He has 10,000 books. He chugs coffee by the liters.
-            He likes the great outdoors, which entices me, but I
-            don’t like witnessing strangers constantly melting at
+            He owns 10,000 books. He chugs coffee by the liter.
+            He enjoys the great outdoors, which entices me, but I'm
+            tired of constantly witnessing strangers melting in
             my very presence.
         </p>
         <P>
@@ -55,12 +55,12 @@
     <div class="photoGallery" id="photoGallery">
             <a href="images/1bird.jpg" target="_blank">
                 <img src="images/1bird.jpg" alt="brown bird">
-                <figcaption>The wooden floors excentuate its tasitness.</figcaption>
+                <figcaption>The wooden floors accentuate its tastiness.</figcaption>
             </a>
 
             <a href="images/2rabbit.jpg" target="_blank">
                 <img src="images/2rabbit.jpg" alt="rabbit">
-                <figcaption>You are really just eating the grass for me...</figcaption>
+                <figcaption>You are really just munching it for me...</figcaption>
             </a>
 
             <a href="images/3snake.jpg" target="_blank">
@@ -70,7 +70,7 @@
 
             <a href="images/4blackbird.jpg" target="_blank">
                 <img src="images/4blackbird.jpg" alt="black bird">
-                <figcaption>I'm drooling now dad!</figcaption>
+                <figcaption>I'm drooling now, dad!</figcaption>
             </a>
 
             <a href="images/5yellowbird.jpg" target="_blank">
@@ -80,7 +80,7 @@
 
             <a href="images/6frog.jpg" target="_blank">
                 <img src="images/6frog.jpg" alt="frog">
-                <figcaption>This one spooked me!</figcaption>
+                <figcaption>Ahh! This one spooked me!</figcaption>
             </a>
     </div>
 
