--- a/send_love.html
+++ b/send_love.html
@@ -45,7 +45,7 @@
             </div>
 
             <div>
-                <p>Where did you hear of me?</p>
+                <p>From where did you hear about me?</p>
 
                 <div class="radios">
                     <div>
@@ -54,8 +54,8 @@
                     </div>
 
                     <div>
-                        <input type="radio" id="twitter" name="where_heard" value="Twitter">
-                        <label for="twitter">Twitter</label>
+                        <input type="radio" id="tiktok" name="where_heard" value="tiktok">
+                        <label for="tiktok">TikTok</label>
                     </div>
 
                     <div>
@@ -67,8 +67,8 @@
             </div>
 
             <div>
-                <label for="admiration">Write your admiration here!</label>
-                <textarea id= "admiration" placeholder="Don't be stingy!" name="admiration"></textarea></textarea>
+                <label for="admiration">Drop your admiration here!</label>
+                <textarea id= "admiration" placeholder="I love Wally!" name="admiration"></textarea></textarea>
             </div>
 
 
