--- a/my_papa.html
+++ b/my_papa.html
@@ -57,7 +57,7 @@
             </li>
             <li>
                 <a href=#artGallery>
-                    He llustrates me in his sketchbook...
+                    He illustrates me in his sketchbook...
                 </a>
             </li>
             <li>
