added thank you page after form submission

--- a/send_love.html
+++ b/send_love.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Freckle+Face&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script type = "text/javascript" src="function.js"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
         <h1>Send Your Admiration</h1>
     </header>
 
-    <form action="https://script.google.com/macros/s/AKfycbzgge72Osc-DRwp4fGUfesjJwFfaE9rYYgjJ0qraVw3EgJnvV8X4LeX-i7gPYgqUWt8/exec" method="post">
+    <form id="admiration_form" action="https://script.google.com/macros/s/AKfycbzgge72Osc-DRwp4fGUfesjJwFfaE9rYYgjJ0qraVw3EgJnvV8X4LeX-i7gPYgqUWt8/exec" method="post">
         <fieldset>
             <div>
                 <label for="firstName">First Name</label>
