add round corners for images

--- a/about_me.html
+++ b/about_me.html
@@ -51,7 +51,7 @@
         </P>
         <p>
             I was even called a "quintessential cat" once! The sheer audacity!
-            But seriously, have you ever seen cheekbones and perfect facial symmetry like this?
+            But seriously, have you ever seen such perfect cheekbones and facial symmetry?
         </p>
         <P>
             My humble beginning only made my transformation more impressive.
