--- a/send_love.html
+++ b/send_love.html
@@ -46,7 +46,7 @@
             </div>
 
             <div>
-                <p>From where did you hear about me?</p>
+                <p>How did you hear about me?</p>
 
                 <div class="radios">
                     <div>
@@ -55,8 +55,8 @@
                     </div>
 
                     <div>
-                        <input type="radio" id="tiktok" name="where_heard" value="tiktok">
-                        <label for="tiktok">TikTok</label>
+                        <input type="radio" id="universe" name="where_heard" value="universe">
+                        <label for="universe">The Universe</label>
                     </div>
 
                     <div>
